Fixing wrong color value.

--- a/resources/assets/components/blocks/CampaignInfoBlock/campaign-info-block.scss
+++ b/resources/assets/components/blocks/CampaignInfoBlock/campaign-info-block.scss
@@ -22,7 +22,7 @@
 
   dt {
     clear: right;
-    color: theme('colors.gray.300');
+    color: theme('colors.gray.500');
     font-weight: $weight-sbold;
     text-transform: uppercase;
 
